--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
 @import url(./common.css);
 @import url(./header.css);
-@import url(./hero.css)
+@import url(./hero.css);
+@import url(./thoughts.css);
