--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,3 +5,5 @@
 @import url(./story.css);
 @import url(./footer.css);
 @import url(./info.css);
+@import url(./gallery.css);
+@import url(./hobby.css);
